Fix:Edit spacing for larger screens

--- a/src/client/styles/flyux.scss
+++ b/src/client/styles/flyux.scss
@@ -39,17 +39,12 @@ $imageShadow:5px 10px 10px 10px rgb(138, 157, 160);
     margin-top:20vh;
 }
 
-#user_flow_diagram, #medium_fidelity, #midfi, #wireframes, #affinity, #usability, #survey{
+#user_flow_diagram, #medium_fidelity, #midfi, #wireframes, #affinity, #usability, #survey, #high_fidelity, #hifi, #wireframes{
     margin-bottom:15vh;
-}
-
-#high_fidelity{
     margin-top:12vh;
 }
 
-#high_fidelity, #hifi, #wireframes, #high_fidelity{
-    margin-bottom:12vh;
-}
+
 
 #process{
     align-items: space-between;
